# commsdk-ice

./: .gitignore  Doc.txt  README.txt  UVSS二次开发文档.doc  callback.ice  clientserver.cpp  clientserver.h  clientserver.ice  clientserverI.cpp  clientserverI.h  g++
client/: CMakeLists.txt  client.sln  clientI.cpp  clientI.h  clienti.cpp  clienti.h  uvssclient.cpp  uvssclient.h  uvssclientsdk.cpp  uvssclientsdk.h  version.h.in
client/client/: client.vcxproj  client.vcxproj.filters  clientI.cpp  clientI.h  clientcheckinfocallback.c  clientcheckinfocallback.h  clientconnectioninfocallback.h  main.cpp  uvssclient.cpp  uvssclient.h  uvssclientsdk.cpp  uvssclientsdk.h
client/clientconsole/: clientcheckinfocallback.c  clientcheckinfocallback.h  clientconnectioninfocallback.c  clientconsole.sln  clientconsole.vcxproj  clientconsole.vcxproj.filters  main.cpp  version.h
client/demo/: CMakeLists.txt  client-demo.cpp  client.cpp
client/include/: UVSSSDK.h  WorkQueue.h  callbackreceiveri.h  clienti.h  global.h  peerproxies.h  rpcexecutor.h  rpcproxies.h  uvssclient.h  uvssclientsdk.h  uvssclientwrapper.h  workqueue.h
client/src/: CMakeLists.txt  WorkQueue.cpp  callbackreceiveri.cpp  clienti.cpp  global.cpp  peerproxies.cpp  rpcexecutor.cpp  rpcproxies.cpp  uvssclient.cpp  uvssclientsdk.cpp  uvssclientwrapper.cpp  workqueue.cpp
client/test/: main.cpp  test.cpp  uvssclientsdk.h
server/: CMakeLists.txt  server.sln  serverI.cpp  serverI.h  serveri.cpp  serveri.h  uvssserver.cpp  uvssserver.h  uvssserversdk.cpp  uvssserversdk.h  version.h.in
server/demo/: CMakeLists.txt  server.cpp
server/include/: UVSSServer.h  callbacksenderi.h  global.h  peerproxies.h  rpcexecutor.h  rpcproxies.h  serveri.h  uvssserver.h  uvssserversdk.h  uvssserverwrapper.h  workqueue.h
server/server/: main.cpp  server.vcxproj  server.vcxproj.filters  serverI.cpp  serverI.h  serverconnectioninfocallback.c  uvssserver.cpp  uvssserver.h  uvssserversdk.cpp  uvssserversdk.h
server/serverconsole/: main.cpp  serverconnectioninfocallback.c  serverconnectioninfocallback.h  serverconsole.sln  serverconsole.vcxproj  serverconsole.vcxproj.filters  version.h
server/src/: CMakeLists.txt  callbacksenderi.cpp  global.cpp  peerproxies.cpp  rpcexecutor.cpp  rpcproxies.cpp  serveri.cpp  uvssserver.cpp  uvssserversdk.cpp  uvssserverwrapper.cpp  workqueue.cpp
server/test/: main.cpp  test.cpp  uvssserversdk.h
